--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Hooshid\\Lumos\\": "src"
+            "Hooshid\\Lumos\\": "src/"
         }
     },
     "extra": {
