--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8.0",
-        "illuminate/support": "^10"
+        "illuminate/support": ">=10"
     },
     "autoload": {
         "psr-4": {
